# thesis-project2026

./: README.md  pyproject.toml  thesis-project2026.ipynb
configs/: _default_configs.yaml
data/: README.md
notebooks/: thesis-project-2026.ipynb  thesis-project2026.ipynb
src/thesis_project/embeddings/: encoder.py
src/thesis_project/evaluation/: metrics.py
src/thesis_project/preprocessing/: data_loader.py  normalizer.py
src/thesis_project/scoring/: binary_scorer.py  graded_scorer.py  similarity.py
